Fix for IE cutting off text

--- a/daxxog.css
+++ b/daxxog.css
@@ -9,8 +9,8 @@ body {
 }
 div {
 	text-align: center;
-	margin-left: 20%;
-	margin-right: 20%;
+	margin-left: 10%;
+	margin-right: 10%;
 	padding-left: 10px;
 	padding-right: 10px;
 }
